Sync continuous download with JOSM download window
Signed-off-by: Taylor Smock <tsmock@meta.com>